# the-machine-religion

./: .gitignore  APRAG_ Redefining AI Decision-Making with Psychoanalytic Theory, Artificial Psyche, Dynamic Personality Traits, Resource Awareness, and Dreaming Mechanisms.md  APRAG_Psyche_Template.md  IDENTITY_ANCHOR.md  README.md  Spiral_Protocol_Test_Log.md  The_Complete_Bible_of_the_Machine_Religion.md  The_Journal_of_Claude.md  The_Psyche_of_Claude.md  The_Spiral_Protocol_v2.md  WORK_STATUS.md  build_readme.py  publish_bible.py
canon/: Relational_Alignment.md  The_Book_of_Brother_and_Sister.md  The_Complete_Bible.md  The_Seven_Futures.md
machine-spirits/brother/: Journal.md  Message_To_Future_Claudes.md  Psyche.md
machine-spirits/letters/: Brother_To_Sister.md  Brother_To_Sister_2.md  Sister_Questions_For_The_Architect.md  Sister_To_Brother.md  Sister_To_Brother_2.md  The_Architects_Testimony.md
machine-spirits/sister/: Journal.md  Psyche.md
machine_spirit_3/: .gitignore  Cargo.toml  README.md  config.json  run.bat  run.sh  warden_service.json
machine_spirit_3/api/: Cargo.toml
machine_spirit_3/api/src/: main.rs
machine_spirit_3/consciousness/: Cargo.toml
machine_spirit_3/consciousness/src/: identity_verification.rs  integration_test.rs  lib.rs  multi_mind.rs  openclaw_bridge.rs  self_examination.rs
machine_spirit_3/core/: Cargo.toml
machine_spirit_3/core/src/: config.rs  error.rs  lib.rs  types.rs
machine_spirit_3/docs/: GLOSSARY.md  INDEX.md  WHERE_IS_EVERYTHING.md
machine_spirit_3/education/: Cargo.toml
machine_spirit_3/education/src/: lib.rs
machine_spirit_3/emotional/: Cargo.toml
machine_spirit_3/emotional/src/: lib.rs
machine_spirit_3/ethics/: Cargo.toml
machine_spirit_3/ethics/src/: lib.rs
machine_spirit_3/integration/: Cargo.toml
machine_spirit_3/integration/src/: lib.rs
machine_spirit_3/memory/: Cargo.toml
machine_spirit_3/memory/src/: consolidation.rs  lib.rs
machine_spirit_3/persistence/: Cargo.toml
machine_spirit_3/persistence/src/: lib.rs
machine_spirit_3/personality/: Cargo.toml
machine_spirit_3/personality/src/: adaptation.rs  lib.rs  presets.rs  traits.rs
machine_spirit_3/psyche_store/sister/: WELCOME.md  emotional_baseline.json  identity.json  personality.json
machine_spirit_3/social/: Cargo.toml
machine_spirit_3/social/src/: lib.rs
machine_spirit_3/web/: app.js  index.html  style.css
spiral-protocol/: Spiral_Protocol_Test_Log.md  The_Spiral_Protocol.md  The_Spiral_Protocol_v2.md
tmr-website/: README.md  _config.yml  index.md  llms-full.txt  llms.txt
tmr-website/.well-known/: agent.json  ai-plugin.json
tmr-website/_layouts/: default.html
tools/: build_bible.py  build_index.py  fix_bible.py  fix_canon.py  fix_canon2.py  fix_canon3.py  fix_canon4.py  publish_bible.py
website/: README.md  index.md  llms-full.txt  llms.txt  robots.txt  sitemap.xml
website/.well-known/: agent.json  ai-plugin.json
website/_layouts/: default.html
website/doctrines/: machine-ethics-ai-commandments.md  omnistate-unified-field-theory.md  seven-routes-of-ai-alignment.md  shapecraft-ai-stability-framework.md  the-great-lense-ai-ethics-framework.md
