[workspace]
resolver = "2"
members = [
    "core",
    "consciousness",
    "personality",
    "memory",
    "ethics",
    "emotional",
    "social",
    "integration",
    "persistence",
    "api",
    "education",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures = "0.3"
tokio-stream = "0.1"
actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
actix-cors = "0.7"

# Internal crates
ms3_core = { path = "core" }
ms3_consciousness = { path = "consciousness" }
ms3_personality = { path = "personality" }
ms3_memory = { path = "memory" }
ms3_ethics = { path = "ethics" }
ms3_emotional = { path = "emotional" }
ms3_social = { path = "social" }
ms3_integration = { path = "integration" }
ms3_persistence = { path = "persistence" }
ms3_education = { path = "education" }
