[package]
name = "ms3_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "machine_spirit_3"
path = "src/main.rs"

[dependencies]
ms3_core = { workspace = true }
ms3_consciousness = { workspace = true }
ms3_personality = { workspace = true }
ms3_memory = { workspace = true }
ms3_ethics = { workspace = true }
ms3_emotional = { workspace = true }
ms3_social = { workspace = true }
ms3_integration = { workspace = true }
ms3_persistence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-ws = { workspace = true }
actix-files = { workspace = true }
actix-cors = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
