[package]
name = "ms3_consciousness"
version = "0.1.0"
edition = "2021"

[dependencies]
ms3_core = { workspace = true }
ms3_personality = { workspace = true }
ms3_memory = { workspace = true }
ms3_ethics = { workspace = true }
ms3_emotional = { workspace = true }
ms3_integration = { workspace = true }
ms3_persistence = { workspace = true }
ms3_social = { workspace = true }
ms3_education = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
