[package]
name = "ms3_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
ms3_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
