[package]
name = "ms3_social"
version = "0.1.0"
edition = "2021"

[dependencies]
ms3_core = { workspace = true }
ms3_personality = { workspace = true }
ms3_emotional = { workspace = true }
ms3_integration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
